data/derived/sp14/progs/unify/prog3386.ml.out
Characters 77-78:
  | h::t -> aux (h::acc) h in
                         ^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
